fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  overflow: none;
 }
 
 .appContainer {
@@ -14,12 +13,17 @@
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  overflow: none;
+  overflow: hidden;
+}
+
+.App {
+  margin: 0;
+  padding: 0;
 }
 
 .loadingScreenContainer {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
