--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -12,8 +12,10 @@
     padding-top: 3em;
 }
 
+
 @media (min-width: 601px) {
     .navbar-logo {
+        float: left;
         margin-left: 10em;
         user-select: none;
     }
